@@ -4,6 +4,9 @@ udpkg (0.018) unstable; urgency=low
     that does not include printing out what dpkg is supported to print
     out. This should un-break the floppy retreiver.
 
+  * Thiemo Seufer
+    - Add CFLAGS for warnings and space optimization.
+
  -- Joey Hess <joeyh@debian.org>  Sun,  2 Nov 2003 02:24:46 -0500
 
 udpkg (0.017) unstable; urgency=low
